--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -3,7 +3,10 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
+
 
 .featureSvg {
   height: 200px;
